@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-22T16:00:56Z",
+  "timestamp" : "2024-01-24T00:27:14Z",
   "count_outdated" : 71,
   "uniques_outdated" : 54,
-  "count" : 73,
-  "uniques" : 56,
+  "count" : 74,
+  "uniques" : 57,
   "clones" : [
     {
       "timestamp": "2024-01-11T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-01-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
